syntax = "proto3";

option csharp_namespace = "GrpcWebSocketBridge.Tests.Protos";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloDuplex (stream HelloRequest) returns (stream HelloReply);
  rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloReply);
  rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
